hphp/test/zend/bad/ext/filter/tests/033.php
<?php
include dirname(__FILE__) . '/033_run.inc';
?>